--- a/pcap-conduit.cabal
+++ b/pcap-conduit.cabal
@@ -1,5 +1,5 @@
 name:                pcap-conduit
-version:             0.1.0.0
+version:             0.0
 synopsis:            Conduit <-> libpcap
 description:
   Provides a Conduit Source for reading from pcap files or live network
@@ -13,22 +13,24 @@ maintainer:          Austin Seipp <mad.one@gmail.com>
 category:            Network, Development
 build-type:          Simple
 cabal-version:       >=1.10
-tested-with:         GHC==7.0.4, GHC==7.2.1
+tested-with:         GHC==7.0.4, GHC==7.2.1, GHC==7.4.2
 
 extra-source-files:
-  README.md, tests/Properties.hs
+  AUTHORS.txt, README.md, tests/Properties.hs
 
 source-repository head
   type: git
   location: https://github.com/thoughtpolice/pcap-conduit.git
 
 library
-  exposed-modules: Data.Conduit.Pcap
+  exposed-modules:
+    Network.Pcap.Conduit
   build-depends:
     base         >= 3 && < 5,
-    pcap         >= 0.4,
-    conduit      >= 0.4,
-    bytestring   >= 0.9
+    bytestring,
+    transformers,
+    pcap,
+    conduit
 
   ghc-options:      -Wall -O2 -fwarn-tabs
   default-language: Haskell98
@@ -40,10 +42,10 @@ test-suite properties
 
   build-depends:
     base           >= 3 && < 5,
-    bytestring     >= 0.9,
-    QuickCheck     >= 2.4,
-    test-framework >= 0.5,
-    test-framework-quickcheck2 >= 0.2,
+    transformers,
+    bytestring,
+    pcap,
+    conduit,
     pcap-conduit
 
   ghc-options:      -fno-cse -fno-warn-orphans
