--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: haskell
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libpcap-dev
 install:
-  - cabal update
   - cabal install
-  - cabal install QuickCheck HUnit test-framework test-framework-quickcheck2
-
